v0.10/_sources/examples/upperair/Wyoming_Request.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/upperair/Wyoming_Request.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_upperair_Wyoming_Request.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_upperair_Wyoming_Request.py:


Wyoming Upper Air Data Request
==============================

This example shows how to use siphon's `simplewebswervice` support to create a query to
the Wyoming upper air archive.

.. GENERATED FROM PYTHON SOURCE LINES 11-18

.. code-block:: Python


    from datetime import datetime

    from metpy.units import units

    from siphon.simplewebservice.wyoming import WyomingUpperAir








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Create a datetime object for the sounding and string of the station identifier.

.. GENERATED FROM PYTHON SOURCE LINES 20-23

.. code-block:: Python

    date = datetime(2024, 9, 27, 0)
    station = 'GSO'








.. GENERATED FROM PYTHON SOURCE LINES 24-25

Make the request (a pandas dataframe is returned).

.. GENERATED FROM PYTHON SOURCE LINES 25-27

.. code-block:: Python

    df = WyomingUpperAir.request_data(date, station)








.. GENERATED FROM PYTHON SOURCE LINES 28-29

Inspect data columns in the dataframe.

.. GENERATED FROM PYTHON SOURCE LINES 29-31

.. code-block:: Python

    print(df.columns)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Index(['pressure', 'height', 'temperature', 'dewpoint', 'direction', 'speed',
           'u_wind', 'v_wind', 'station', 'station_number', 'time', 'latitude',
           'longitude', 'elevation', 'pw'],
          dtype='object')




.. GENERATED FROM PYTHON SOURCE LINES 32-33

Pull out a specific column of data.

.. GENERATED FROM PYTHON SOURCE LINES 33-35

.. code-block:: Python

    print(df['pressure'])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    0      981.0
    1      965.0
    2      945.0
    3      925.0
    4      913.0
           ...  
    150     61.0
    151     60.0
    152     58.2
    153     58.0
    154     57.9
    Name: pressure, Length: 155, dtype: float64




.. GENERATED FROM PYTHON SOURCE LINES 36-38

Units are stored in a dictionary with the variable name as the key in the `units` attribute
of the dataframe.

.. GENERATED FROM PYTHON SOURCE LINES 38-40

.. code-block:: Python

    print(df.units)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    {'pressure': 'hPa', 'height': 'meter', 'temperature': 'degC', 'dewpoint': 'degC', 'direction': 'degrees', 'speed': 'knot', 'u_wind': 'knot', 'v_wind': 'knot', 'station': None, 'station_number': None, 'time': None, 'latitude': 'degrees', 'longitude': 'degrees', 'elevation': 'meter', 'pw': 'millimeter'}




.. GENERATED FROM PYTHON SOURCE LINES 41-43

.. code-block:: Python

    print(df.units['pressure'])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    hPa




.. GENERATED FROM PYTHON SOURCE LINES 44-45

Units can then be attached to the values from the dataframe.

.. GENERATED FROM PYTHON SOURCE LINES 45-50

.. code-block:: Python

    pressure = df['pressure'].values * units(df.units['pressure'])
    temperature = df['temperature'].values * units(df.units['temperature'])
    dewpoint = df['dewpoint'].values * units(df.units['dewpoint'])
    u_wind = df['u_wind'].values * units(df.units['u_wind'])
    v_wind = df['v_wind'].values * units(df.units['v_wind'])








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.073 seconds)


.. _sphx_glr_download_examples_upperair_Wyoming_Request.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Wyoming_Request.ipynb <Wyoming_Request.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Wyoming_Request.py <Wyoming_Request.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Wyoming_Request.zip <Wyoming_Request.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
